@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] Convert rollout to StepSequence
+        https://bugs.webkit.org/show_bug.cgi?id=32406
+
+        * Scripts/modules/buildsteps.py:
+        * Scripts/modules/commands/download.py:
+        * Scripts/modules/commands/download_unittest.py:
+        * Scripts/modules/mock_bugzillatool.py:
+
+2009-12-14  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         [bzt] Kill LandingSequence
         https://bugs.webkit.org/show_bug.cgi?id=32464
 
